--- a/package.json
+++ b/package.json
@@ -37,5 +37,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://jxlove2020.github.io/movie_app/"
+  "homepage": "https://jxlove2020.github.io/movie-app/"
 }
